--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngrx/store": "^16.3.0",
     "@popperjs/core": "^2.11.6",
+    "@types/quill": "^1.3.10",
     "angular-tabler-icons": "^2.40.0",
     "bootstrap": "^5.2.3",
+    "ngx-quill": "^22.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
