--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@ngrx/store": "^16.3.0",
     "@popperjs/core": "^2.11.6",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "@types/quill": "^1.3.10",
     "angular-tabler-icons": "^2.40.0",
     "bootstrap": "^5.2.3",
     "ngx-quill": "^22.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
