--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/quill": "^1.3.10",
     "angular-tabler-icons": "^2.40.0",
     "bootstrap": "^5.2.3",
+    "ngx-infinite-scroll": "^16.0.0",
     "ngx-quill": "^22.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
